[package]
name = "marmalade"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.0"
bevy = "0.6.1"
bevy-inspector-egui = { version = "0.8.2", optional = true }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", optional = true }

[features]
dev = ["bevy-inspector-egui"]
editor = ["bevy_editor_pls"]

[workspace]
default-members = ["."]
members = [".", "xtask"]

# How about we make our game not super slow?
[profile.dev]
opt-level = 1

# And how about we make our dependencies (like all the math) super fast?
[profile.dev.package."*"]
opt-level = 3
