[package]
name = "marmalade"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.0"
bevy = "0.6.1"
bevy-inspector-egui = { version = "0.8.2", optional = true }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", optional = true }
bevy_tweening = "0.3.2"
nalgebra-glm = "0.16.0"
heron = { version = "2", features = ["2d"] }
rand = "0.8.5"
bevy_mod_picking = "0.5.4"

[features]
dev = ["bevy-inspector-egui"]
editor = ["bevy_editor_pls"]

[workspace]
default-members = ["."]
members = [".", "xtask"]

# How about we make our game not super slow?
[profile.dev]
opt-level = 1

# And how about we make our dependencies (like all the math) super fast?
[profile.dev.package."*"]
opt-level = 3
